# mock-exam-generator

./: .gitignore  README.md  README_EXAM_GENERATOR.md  __init__.py  cli.py  config.py  exporter.py  generator.py  main.py  models.py  parser.py  persistence.py  pyproject.toml  requirements.txt
core/: __init__.py  compiler.py  generator.py  loader.py  models.py  persistence.py  selector.py
latex/: template.tex
problems/: floating_point_problem1.tex  floating_point_problem2.tex  integration_problem1.tex  interpolation_problem1.tex  least_squares_problem1.tex  linear_systems_problem1.tex  linear_systems_problem2.tex  newtons_method_problem1.tex  odes_rk_problem1.tex  odes_rk_problem10.tex  odes_rk_problem11.tex  odes_rk_problem12.tex  odes_rk_problem13.tex  odes_rk_problem14.tex  odes_rk_problem2.tex  odes_rk_problem3.tex  odes_rk_problem4.tex  odes_rk_problem5.tex  odes_rk_problem6.tex  odes_rk_problem7.tex  odes_rk_problem8.tex  odes_rk_problem9.tex  test_multi.tex
questions/: Newtons Method.tex  ODEs.tex
tests/: __init__.py  test_cli.py  test_compiler.py  test_exporter.py  test_generator.py  test_loader.py  test_models.py  test_parser.py  test_persistence.py  test_sample_latex.py  test_selector.py
