[project]
name = "mock-exam-generator"
version = "1.0.0"
description = "A Python application for generating mock exams from LaTeX problem files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

